styles.css
/*Color Palette:
Black: #030301
Khaki: #b7ad99
Hot Pink: #ff4365
Mint: #00d9c0
Ivory White: #fffff3
*/
* {
    margin: 0;
    padding: 0;
}
/*Navigation Bar*/
ul{
    list-style: none;
    display:flex;
    justify-content: space-around;
}

a{
    text-decoration: none;
}
a:link {
    color: #fffff3;
    background-color: transparent;
    text-decoration: none;
}
a:visited{
    color: #fffff3;
    background-color: transparent;
    text-decoration: none;
}
a:hover{
    color: #00d9c0;
    background-color:transparent;
    text-decoration: none;
}
.learning a:hover{
    color: #ff4365;
}
a:active{
    color:#fffff3;
    background-color: transparent;
    text-decoration:none;

}
.nav-bar{
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    background-color: black;
    color: #fffff3;
    padding: 0px 15px;
    font-family:'Permanent Marker',serif;
    position: fixed;
    left: 0;
    width: 100%;
    top: 0;
    overflow: auto;
}
.nav-bar:hover{
    cursor:pointer;
}
/*Homepage header and intro paragraph*/
.introduction{
/*background-color: #b7ad99;*/
/*background-color: #fffff3;*/
/*background-color: #ff4365;*/
background-color: #000000;
color: #fffff3;
padding: 30px;
}
.introduction p{
    font-size:20px;
    line-height:1.5em;
    font-weight: bold;
    text-align: center;
}
/*Sidebar with links to learning resources*/
.learning{
    /*background-color: #ff4365;*/
    background-color:#00d9c0;
    padding: 30px;
    margin-right: 20px;
    border: 3px solid black;
    margin-top:30px;
}
.learning h6{
    font-size:2em;
    padding-bottom:1em;
}
.learning p{
    line-height: 2em;
}
.learning ul{
    display:block;
    padding:10px 0px;
    text-align: center;
    line-height:2em;
    font-size: 1em;
}
/*
Use if decide to have image smaller and centered
.homepage-image{
    background-color: white;
    padding: 200px;
    display:grid;
    height: 100%;
}*/

/* Align the main homepage content*/
.home-alignment{

}
/*Upper left side of webpage, inside nav-bar*/
.logo{
    display:flex;
    margin-right:auto;
}
h1{
    margin-top:10px;
    margin-bottom:10px;
}
/*.center-img{
    max-height: 100vh;
    max-width: 100%;
    margin: auto;
}*/
#background-img{
    background-image: url("./images/coding-homepage.jpg");
    width:100vw;
    height:100vh;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    position: static;
}
h2{
    font-family:'Permanent Marker',serif;
    font-size: 2em;
    text-align: center;
    padding-bottom: 1em;
}
.about{
    background-color: white;
    /*background-color: #fffff3;*/
padding: 30px;
text-align:center;
}
.about ul{
    font-size:1em;
    display: block;
    line-height: 2em;
    text-align: center;
}
.about h3{
    text-transform: uppercase;
    line-height: 2em;
    font-size: 3em;
    text-align: center;
    margin-bottom: 20px;
}
.about h4{
    margin-top: 1em;
    font-size: 2em;
    padding-bottom:10px;
}
#contact div{
    padding:2em;
}
section.introduction{
    margin: -10em 0 0 0;
}
.home-font{
    font-family:'Permanent Marker','Roboto',serif;
}
.about .list-in-list li{
    list-style-position: inside;
}
.projects-container{
    display: grid;
    gap: 20px;
    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
}
.projects-container span{
    font-size:3em;
    font-weight: bold;
    margin-left: 1em;
}
.projects h2{
    padding-top: 32px;
    font-size: 3em;
}
.project-box >img{
    width: 100%;
}
.project-box{
    /*background-color: #00d9c0;*/
    background-image: linear-gradient(#ff4365, #00d9c0, #000000);
    padding: 40px;
    margin: 20px;
    box-shadow: 10px 5px 15px black;
}
.footer{
    text-align: center;
    text-transform: uppercase;
    font-weight: bold;
    /*background-color: #b7ad99;*/
    background-color: #f2f2f2;
    box-shadow: 10px 5px 15px #f2f2f2;
    padding: 20px;
    font-family:'Permanent Marker','Roboto',serif;
}
.home-middle-alignment{
    display: grid;
    grid-template-columns: 2fr 1fr;
}
.footer-flex{
    display: flex;
    align-items: center;
    justify-content: end;
    gap: 1em;
    margin-right: 2em;
}
.fa-brands{
    background-color: black;
    border: solid 4px black;

}
/* Media Queries */
@media only screen and (max-width: 1200px) {
    .home-middle-alignment{
       display: flex;
       justify-content: center;
       flex-flow: row wrap;
    }
    .learning{
        margin-right:0px;
    }
    
}
@media only screen and (max-width:320px){

}

